fixed background cutting off bug

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,10 @@
-body {
+.page {
   font-size: 1rem;
   background-color: #ebfcf7;
   background-image: linear-gradient(to right bottom, #dafcf7, #d3f8fc, #d1f2ff, #d5ebff, #dde4ff);
   font-family: "Segoe UI",'DM Sans', "Helvetica Neue", Arial, sans-serif;
 }
+
 
 footer {
   background-color: transparent !important;
